<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>no.lillehaug.landingsopplysninger</groupId>
    <artifactId>landingsopplysninger</artifactId>
    <packaging>pom</packaging>
    <version>1.0-SNAPSHOT</version>

    <url>https://github.com/computerlove/Fiskeoversikt</url>

    <scm>
        <connection>scm:git:git@github.com:computerlove/Fiskeoversikt.git</connection>
    </scm>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <reststop.version>3.8</reststop.version>
        <kotlin.version>1.2.31</kotlin.version>
        <kotlin.compiler.jvmTarget>1.8</kotlin.compiler.jvmTarget>

        <slf4j-api.version>1.7.25</slf4j-api.version>
        <logback.version>1.2.3</logback.version>
        <javax.servlet-api.version>3.1.0</javax.servlet-api.version>
        <!--<javax.servlet-api.version>4.0.0</javax.servlet-api.version>-->
        <metrics.version>3.0.2</metrics.version>
        <junit-jupiter.version>5.3.1</junit-jupiter.version>
        <junit-platform.version>1.3.1</junit-platform.version>

        <javax.ws.rs-api.version>2.0.1</javax.ws.rs-api.version>
    </properties>

    <modules>
        <module>plugins</module>
        <module>webapp</module>
        <module>library</module>
    </modules>

    <dependencies>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j-api.version}</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>jcl-over-slf4j</artifactId>
            <version>${slf4j-api.version}</version>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
            <version>${slf4j-api.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>${junit-jupiter.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${junit-jupiter.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-params</artifactId>
            <version>${junit-jupiter.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.jetbrains.kotlin</groupId>
            <artifactId>kotlin-test-junit</artifactId>
            <version>${kotlin.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>no.lillehaug.landingsopplysninger</groupId>
                <artifactId>landingsopplysninger-api</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>no.lillehaug.landingsopplysninger</groupId>
                <artifactId>library</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>javax.servlet</groupId>
                <artifactId>javax.servlet-api</artifactId>
                <version>${javax.servlet-api.version}</version>
            </dependency>

            <dependency>
                <groupId>javax.ws.rs</groupId>
                <artifactId>javax.ws.rs-api</artifactId>
                <version>${javax.ws.rs-api.version}</version>
            </dependency>

            <dependency>
                <groupId>org.kantega.reststop</groupId>
                <artifactId>reststop-api</artifactId>
                <version>${reststop.version}</version>
            </dependency>

            <dependency>
                <groupId>org.kantega.reststop</groupId>
                <artifactId>reststop-jaxrs-api</artifactId>
                <version>${reststop.version}</version>
            </dependency>

            <dependency>
                <groupId>org.kantega.reststop</groupId>
                <artifactId>reststop-core</artifactId>
                <version>${reststop.version}</version>
                <scope>runtime</scope>
            </dependency>
            <dependency>
                <groupId>org.kantega.reststop</groupId>
                <artifactId>reststop-servlet</artifactId>
                <version>${reststop.version}</version>
                <scope>runtime</scope>
            </dependency>
            <dependency>
                <groupId>org.kantega.reststop</groupId>
                <artifactId>reststop-servlet-api</artifactId>
                <version>${reststop.version}</version>
            </dependency>

        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                <configuration>
                    <source>1.10</source>
                    <target>1.10</target>
                    <compilerArgs>
                        <arg>--add-modules</arg>
                        <arg>java.xml.ws.annotation</arg>
                    </compilerArgs>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.22.1</version>
            </plugin>

            <plugin>
                <groupId>org.jetbrains.kotlin</groupId>
                <artifactId>kotlin-maven-plugin</artifactId>
                <version>${kotlin.version}</version>

                <executions>
                    <execution>
                        <id>compile</id>
                        <phase>process-sources</phase>
                        <goals>
                            <goal>compile</goal>
                        </goals>
                    </execution>

                    <execution>
                        <id>test-compile</id>
                        <phase>process-test-sources</phase>
                        <goals>
                            <goal>test-compile</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.0.2</version>
                <configuration>
                    <archive>
                        <manifest>
                            <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                            <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
                        </manifest>
                    </archive>
                </configuration>
                <inherited>true</inherited>
            </plugin>

        </plugins>
    </build>
</project>
